--- a/app/views/scramble/_scramblebox.html.erb
+++ b/app/views/scramble/_scramblebox.html.erb
@@ -5,5 +5,6 @@
           		</div>
           	<div class="scramblebuy">
           		<a href="#" class="btn btn-primary" id="scramblebtn">Buy<i class="icon-chevron-right"></i></a>
+          		<h4> Current: 20% - 500 kr ,- </h4>
           	</div>
           </div>
